<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorViewGroupBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:orientation="vertical"
          android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:elevation="@dimen/card_ev"
        app:cardBackgroundColor="@color/colorCardViewBackground"
        app:cardCornerRadius="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

             <!--显示缩略图-->
            <LinearLayout
                android:id="@+id/ll_is_show_list_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:padding="15dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_thumb_show"
                    android:textColor="@color/colorTextViewBlack"
                    android:textSize="15sp" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/colorLine" />
            <!--显示缩略图质量-->
            <LinearLayout
                android:id="@+id/ll_setting_image_quality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="15dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_setting_image_quality_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_thumb_quality"
                    android:textColor="@color/colorTextViewBlack"
                    android:textSize="15sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_setting_image_quality_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/setting_thumb_quality_tip"
                    android:textColor="@color/colorTextEnableGary"
                    android:textSize="12sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tv_setting_image_quality_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/setting_quality_hige"
                    android:textColor="@color/colorTextEnableGary"
                    android:textSize="12sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="#F5F5F5" />
            <!--妹子页启动与否-->
            <LinearLayout
                android:id="@+id/ll_is_show_launcher_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="15dp">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="启动页妹子图"
                        android:textColor="@color/colorTextViewBlack"
                        android:textSize="15sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_is_show_launcher_img_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="基佬怎么会需要妹子"
                        android:textColor="@color/colorTextEnableGary"
                        android:textSize="12sp" />
                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_setting_show_launcher_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/colorLine" />
            <!--是否概率出现-->
            <LinearLayout
                android:id="@+id/ll_is_always_show_launcher_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_is_always_show_launcher_img_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="概率出现"
                        android:textColor="@color/colorTextViewBlack"
                        android:textSize="15sp" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/tv_is_always_show_launcher_img_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="我每次都要幸临，没毛病"
                        android:textColor="@color/colorTextEnableGary"
                        android:textSize="12sp" />
                </LinearLayout>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_setting_always_show_launcher_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="#F5F5F5" />
            <!---清除缓存-->
            <LinearLayout
                android:id="@+id/setting_clearCache_ll"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="@dimen/image_paddingSize"
                                android:text="@string/clear_cache"
                                android:textColor="@color/colorTextViewBlack"
                                android:textSize="@dimen/me_textSize" />

                            <TextView
                                android:id="@+id/setting_cacheSize_ll"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/image_paddingSize"
                                android:text="0.0M"
                                android:textColor="@color/colorTextViewGrey"
                                android:textSize="@dimen/small_tv_size" />
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="#F5F5F5" />
            <!--检查更新-->
            <LinearLayout
                android:id="@+id/setting_checkUpdate_ll"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginStart="@dimen/image_paddingSize"
                                android:text="@string/check_update"
                                android:textColor="@color/colorTextViewBlack"
                                android:textSize="@dimen/me_textSize" />

                            <TextView
                                android:id="@+id/setting_version_ll"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="1.0"
                                android:layout_marginStart="@dimen/image_paddingSize"
                                android:textColor="@color/colorTextViewGrey"
                                android:textSize="@dimen/small_tv_size" />
                        </LinearLayout>

                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="#F5F5F5" />
            <!--关于-->
            <LinearLayout
                android:id="@+id/setting_about_ll"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/image_paddingSize"
                            android:text="@string/about"
                            android:textColor="@color/colorTextViewBlack"
                            android:textSize="@dimen/me_textSize" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_size"
                            android:layout_alignParentBottom="true"
                            android:background="@color/colorViewGroupBackground" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="#F5F5F5" />
            <!--退出登录-->
            <LinearLayout
                android:id="@+id/setting_logout_ll"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="@dimen/image_paddingSize"
                            android:gravity="center"
                            android:text="@string/logout"
                            android:textColor="@color/x_red"
                            android:textSize="@dimen/me_textSize" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
      <include layout="@layout/recycler_footer"/>
      </LinearLayout>
  </ScrollView>

</LinearLayout>